<resources>
    <!--String del main Activity-->
    <string name="app_name">AbuMonitor</string>
    <string name="cmd_define_areas">Definir Areas</string>
    <string name="cmd_define_reminder">Definir Recordatorios</string>
    <string name="cmd_define_contacts">Definir Contactos</string>
    <string name="cmd_define_routes">Definir Rutas</string>

    <!--String del fragment de definir Areas.-->
    <string name="cmd_configurar_geofences"> Configurar Geofences</string>
    <string name="cmd_guardar_geofences"> Guardar Geofences</string>
    <string name="cmd_cancelar_geofences"> Cancelar Geofences</string>
    <string name="lbl_texto_distancia">Distancia(Mts)</string>
    <string name="lbl_metros">0</string>
    <string name="descripcion_de_area_geofence">Descripcion de Area Geofence</string>
    <string name="zona_segura">Zona Segura</string>
    <string name="tiempo_de_permanencia">Tiempo de permanencia(min)</string>
    <string name="prioridad">Prioridad:</string>
    <string name="evento">Evento:</string>
    <string name="propiedades">Propiedades</string>

    <string-array name="spinner_events">
        <item>Entrar</item>
        <item>Salir</item>
        <item>Permanecer</item>
    </string-array>

    <string-array name="spinner_priority">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>

</resources>