<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_tertiary70"
    tools:context=".ui.Activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="284dp"
        android:layout_height="326dp"
        android:background="@drawable/img_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/app_logo" />

    <Button
        android:id="@+id/cmdDefineAreas"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:background="@drawable/cmd_round"
        android:text="@string/cmd_define_areas"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/cmdDefineReminder"
        android:layout_width="287dp"
        android:layout_height="49dp"
        android:background="@drawable/cmd_round"
        android:text="@string/cmd_define_reminder"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.343" />

    <Button
        android:id="@+id/cmdDefineContacts"
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:background="@drawable/cmd_round"
        android:text="@string/cmd_define_contacts"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.824" />

    <Button
        android:id="@+id/cmdDefineRoutes"
        android:layout_width="290dp"
        android:layout_height="49dp"
        android:background="@drawable/cmd_round"
        android:text="@string/cmd_define_routes"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.606" />

</androidx.constraintlayout.widget.ConstraintLayout>