<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.view.activities.PropertiesGeofenceActivity">


    <!-- Simula el GroupBox con un FrameLayout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:padding="8dp">

    <!-- Título del GroupBox -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GroupBox1"
        android:textColor="#FF0000"
        android:background="#F5F5F5"
        android:padding="2dp"
        android:layout_gravity="top|start" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
        <Spinner
            android:id="@+id/spEvents"
            android:layout_width="233dp"
            android:layout_height="54dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.752"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="54dp"
        android:layout_height="17dp"
        android:text="@string/evento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spEvents"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />
        </LinearLayout>
    </FrameLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="86dp"
        android:layout_height="28dp"
        android:text="@string/prioridad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <EditText
        android:id="@+id/txtDwellTime"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/tiempo_de_permanencia_seg"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <Spinner
        android:id="@+id/spPriority"
        android:layout_width="231dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <CheckBox
        android:id="@+id/chkSecurityZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zona_segura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="334dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/descripcion_de_area_geofence"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:lines="4"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="376dp" />
</LinearLayout>